--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,26 +1,14 @@
 
 .navbar-default {
-  background-image: linear-gradient(to bottom,#007bff 0,#007bff 100%);
+  background-image: linear-gradient(to bottom,#B3E5FC 0,#B3E5FC 100%);
 }
 
 .navbar-default .navbar-nav>li>a {
-  color: #B3E5FC;
+  color: #0277BD;
 }
 
 .navbar-default .navbar-brand {
-  color: #B3E5FC;
-}
-
-.navbar-default .navbar-toggle {
-  border-color: #B3E5FC;
-}
-
-.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
-  color: #fff;
-}
-
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-  background-color: #007bff;
+  color: #0277BD;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -29,31 +17,33 @@
 
 a.active {
   color:#fff!important;
-  background: transparent!important;
 }
+.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
+  color: #fff;
+}
+
+
 a:hover{
   color: #fff;
   background: transparent;
 }
 .fa-female{
   font-size: 2em;
-  color: #007bff;
 }
 
 .fa-male{
   font-size: 2em;
-  color: #007bff;
 }
 
 .fas {
-  color: #007bff;
+  color: #0277BD;
 }
 
 
 .btn-primary {
   background-image: none;
   background-image: linear-gradient(to bottom,#fff 0,#fff 100%);
-  border-color: #007bff;
+  border-color: #0277BD;
   color: #000;
 }
 
@@ -68,7 +58,7 @@ a:hover{
   background-image: linear-gradient(to bottom,#E1F5FE 0,#E1F5FE 100%);
   background-color: #E1F5FE;
   color: #000;
-  border-color: #007bff;
+  border-color: #0277BD;
 }
 
 .card {
@@ -80,7 +70,7 @@ a:hover{
 }
   .card-block {
     padding-left: 20px;
-    border-bottom: solid 2px #007bff;
+    border-bottom: solid 2px #0277BD;
     button {
       top: 12px;
       right: 12px;
