--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -152,19 +152,25 @@ a:hover{
 
 .outerInfo {
     display: inline-block;
-    background-color: black;
-    color: aqua;
-    width: auto;
+    width: 800px;
     position: relative;
+    bottom: 500px;
+}
+
+.outerInfo .outerInfoText {
+    position: relative;
+    font-size: 1.5em;
+    color: #ddffff;
+    background-color: #00aaff;
+    overflow: hidden;
 }
 
 .startDiagramBox {
     padding: 50px;
     display: inline-block;
-    width: auto;
+    width: 100%;
     height: 100%;
 }
-
 
 .m1 {margin:0.5em}
 .m2 {margin: 0.75em}
