--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -150,26 +150,45 @@ a:hover{
     }
   }
 
-.outerInfo {
-    display: inline-block;
-    width: 800px;
-    position: relative;
-    bottom: 500px;
-}
-
-.outerInfo .outerInfoText {
-    position: relative;
-    font-size: 1.5em;
-    color: #ddffff;
-    background-color: #00aaff;
-    overflow: hidden;
-}
-
 .startDiagramBox {
     padding: 50px;
     display: inline-block;
     width: 100%;
     height: 100%;
+}
+
+.outerInfo {
+    display: inline-block;
+    width: 700px;
+}
+
+.outerInfo .outerInfoText {
+    font-size: 1.5em;
+    overflow: hidden;
+}
+
+.innerInfo {
+    display: inline-block;
+    width: 700px;
+}
+
+.innerInfo .innerInfoText {
+    font-size: 1.5em;
+}
+
+.infoBox {
+    display: inline-block;
+    position: absolute;
+    padding: 50px;
+    width: 800px;
+    height: 800px;
+    background-color: #00aaff;
+}
+
+.infoBoxText {
+    display: inline-block;
+    font-size: 1.5em;
+    color: #ddffff;
 }
 
 .m1 {margin:0.5em}
