--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -7,10 +7,6 @@ h3{
   font-size: 6em;
 }
 
-.legend {
-  vertical-align: top;
-}
-
 .bubbleQuestion{
   text-align: center;
   color: #fff;
@@ -158,7 +154,31 @@ a:hover{
     }
   }
 
+  .tooltip {
+      position: relative;
+      display: inline-block;
+      border-bottom: 1px dotted black;
+  }
 
+  .tooltip .tooltiptext {
+      visibility: hidden;
+      width: 120px;
+      background-color: black;
+      color: #fff;
+      text-align: center;
+      border-radius: 6px;
+      padding: 5px 0;
+
+      /* Position the tooltip */
+      position: absolute;
+      z-index: 1;
+      top: -5px;
+      left: 105%;
+  }
+
+  .tooltip:hover .tooltiptext {
+      visibility: visible;
+  }
 
 
 .m1 {margin:0.5em}
