--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2,9 +2,14 @@ body{
   font-family: 'Roboto', sans-serif;
 }
 h3{
-  padding: 40px;
+  padding-top: 60px;
+  padding-bottom: 40px;
   text-align: center;
   font-size: 6em;
+}
+
+img {
+  height: 60px;
 }
 
 .bubbleQuestion{
@@ -13,10 +18,15 @@ h3{
 }
 .navbar-default {
   background-image: linear-gradient(to bottom,#B3E5FC 0,#B3E5FC 100%);
+  min-height: 80px;
 }
 
 .navbar-default .navbar-nav>li>a {
   color: #0277BD;
+  line-height: 50px;
+
+  font-size: 1.5em;
+
 }
 
 .navbar-default .navbar-brand {
